--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,5 +9,14 @@ jobs:
     steps:
       - name: Checkout repository code
         uses: actions/checkout@v2
-      - name: Build and up the image (don't start it to prevent the job from running endlessly)
-        run: docker-compose up --build --no-start
+      - name: Build the image
+        run: docker-compose build
+      - name: Tag the image
+        run: docker tag sample-app-app nexus.gabrielhamel.fr/repository/app-docker/web-php:1.0
+      - name: Login to Nexus Docker registry
+        with:
+          nexus_username: ${{ secrets.NEXUS_USERNAME }}
+          nexus_password: ${{ secrets.NEXUS_PASSWORD }}
+        run: echo "$nexus_password" | docker login nexus.gabrielhamel.fr -u "$nexus_username" --password-stdin
+      - name: Tag and push the image
+        run: docker push nexus.gabrielhamel.fr/repository/app-docker/web-php:1.0
