--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,9 +14,10 @@ jobs:
       - name: Tag the image
         run: docker tag sample-app-app nexus.gabrielhamel.fr/repository/app-docker/web-php:1.0
       - name: Login to Nexus Docker registry
+        uses: docker/login-action@v1
         with:
-          nexus_username: ${{ secrets.NEXUS_USERNAME }}
-          nexus_password: ${{ secrets.NEXUS_PASSWORD }}
-        run: echo "$nexus_password" | docker login nexus.gabrielhamel.fr -u "$nexus_username" --password-stdin
+          username: ${{ secrets.NEXUS_USERNAME }}
+          password: ${{ secrets.NEXUS_PASSWORD }}
+          registry: nexus.gabrielhamel.fr
       - name: Tag and push the image
         run: docker push nexus.gabrielhamel.fr/repository/app-docker/web-php:1.0
