--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,7 @@ jobs:
       - name: Build the image
         run: docker-compose build
       - name: Tag the image
-        run: docker tag sample-app-app nexus.gabrielhamel.fr/repository/app-docker/web-php:1.0
+        run: docker tag t-nsa-800-app nexus.gabrielhamel.fr/repository/app-docker/web-php:1.0
       - name: Login to Nexus Docker registry
         uses: docker/login-action@v1
         with:
