--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,18 +10,20 @@ jobs:
       - name: Checkout repository code
         uses: actions/checkout@v2
       - name: Build the image
-        if: success()
-        run: docker-compose build
+        if: ${{ success() }}
+        run: |
+          docker-compose build
+          docker image ls
       - name: Tag the image
-        if: success()
+        if: ${{ success() }}
         run: docker tag t-nsa-800-app nexus.gabrielhamel.fr/repository/app-docker/web-php:1.0
       - name: Login to Nexus Docker registry
-        if: success()
+        if: ${{ success() }}
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.NEXUS_USERNAME }}
           password: ${{ secrets.NEXUS_PASSWORD }}
           registry: nexus.gabrielhamel.fr
       - name: Tag and push the image
-        if: success()
+        if: ${{ success() }}
         run: docker push nexus.gabrielhamel.fr/repository/app-docker/web-php:1.0
