fix: turns out the image is t-nsa-800-app on my machine and t-nsa-800_app on github action, try specify the name I want manually

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,7 @@ jobs:
       - name: Build the image
         if: ${{ success() }}
         run: |
-          docker-compose build
+          COMPOSE_PROJECT_NAME=t-nsa-800 docker-compose build
           docker image ls
       - name: Tag the image
         if: ${{ success() }}
