--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,11 +12,11 @@ jobs:
       - name: Build the image
         if: ${{ success() }}
         run: |
-          COMPOSE_PROJECT_NAME=t-nsa-800 docker-compose build
+          docker-compose build
           docker image ls
       - name: Tag the image
         if: ${{ success() }}
-        run: docker tag t-nsa-800-app nexus.gabrielhamel.fr/repository/app-docker/web-php:1.0
+        run: docker tag t-nsa-800_app nexus.gabrielhamel.fr/repository/app-docker/web-php:1.0
       - name: Login to Nexus Docker registry
         if: ${{ success() }}
         uses: docker/login-action@v1
