fix: it works ! now try without the multiple if success because maybe it was just the wrong t-nsa-800-app image name

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,20 +10,14 @@ jobs:
       - name: Checkout repository code
         uses: actions/checkout@v2
       - name: Build the image
-        if: ${{ success() }}
-        run: |
-          docker-compose build
-          docker image ls
+        run: docker-compose build
       - name: Tag the image
-        if: ${{ success() }}
         run: docker tag t-nsa-800_app nexus.gabrielhamel.fr/repository/app-docker/web-php:1.0
       - name: Login to Nexus Docker registry
-        if: ${{ success() }}
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.NEXUS_USERNAME }}
           password: ${{ secrets.NEXUS_PASSWORD }}
           registry: nexus.gabrielhamel.fr
       - name: Tag and push the image
-        if: ${{ success() }}
         run: docker push nexus.gabrielhamel.fr/repository/app-docker/web-php:1.0
