--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,5 +16,5 @@ jobs:
           key: ${{ secrets.SSH_KEY_APP_WEB }}
           port: ${{ vars.APP_WEB_PORT }}
           script: |
-            docker login https://nexus.gabrielhamel.fr/ -u ${{ vars.NEXUS_USERNAME }} -p "${{ secrets.NEXUS_PASSWORD }}"
-            docker run nexus.gabrielhamel.fr/repository/app-docker/web-php:1.0
+            sudo docker login https://nexus.gabrielhamel.fr/ -u ${{ vars.NEXUS_USERNAME }} -p "${{ secrets.NEXUS_PASSWORD }}"
+            sudo docker run nexus.gabrielhamel.fr/repository/app-docker/web-php:1.0
